apps/cursor/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cursor

spec:
  ingressClassName: nginx

  rules:
    - host: cursor.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cursor
                port:
                  number: 80
